Make more improvements after feedback